@@ -1,5 +1,8 @@
 Revision history for Perl module Alien::SDL
 
+*
+     - SDL_ttf 2.0.10 is released, changed url [FROGGS]
+
 1.409  Fri July 09 2010
      - Fixed regex for mmx disable 
 
